Adding in stylesheets and JS for server view.

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en" class="">
   <head>
     <title>Today</title>
-    <script src="/today.js"></script>
+    <script src="/dist/bundle.js"></script>
+    <link rel="stylesheet" href="/dist/main.min.css"/>
   </head>
   <body>
     <h1>A Better Today</h1>
